...
                                size: 90,
                                color: .gray)
                            
                            Text("\( firestoreViewModel.firestoreUser?.username ?? "User")")
                                .font(.largeTitle)
                                .foregroundColor(.white)
                                .accessibilityIdentifier("SettingsTitle")
                            
                            Text("\( firestoreViewModel.firestoreUser?.email ?? "")")
                                .font(.title3)
                                .foregroundColor(.gray)
                                .accentColor(.white)
                                .padding(.bottom,30)
...
                            )
                        }
                        Button {
                            authenticationViewModel.logout()
                            firestoreViewModel.firestoreUser = nil
                        } label: {
                            Label("Logout", systemImage: "pip.exit")
                                .foregroundColor(.blue)
                        }.listRowBackground(Color("oxfordBlue"))
                        
                    }
                    .frame(width: isLandscape ? width/1.5 : width/1.1, height: 370)
                    .listStyle(.insetGrouped)
...
