...
                                ListItemView(user: friend)
                                    .frame(width: isLandscape ? width/1.5 : width/1.1)
                            }
                        }
                    }
                    .padding(.top,15)
                }.accessibilityIdentifier("SearchList")
            }
            .searchable(text: $searchTerm, prompt: "Search a friend")
            .navigationTitle("Friends")
            .toolbarColorScheme(.dark, for: .navigationBar)
            .toolbarBackground(
                Color("oxfordBlue"),
...
